# Examius

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  llm.py  rag.py
app/models/: models.py
